tests/facebook_fbs_none/facebook_fbs_none.exp
Error ------------------------------------------------------------------------------------------------------ main.js:3:2

Cannot cast `<fbs />` to number because `React.Element` [1] is incompatible with number [2]. [incompatible-cast]

   main.js:3:2
   3| (<fbs />: number); // Error: ReactElement ~> number
       ^^^^^^^ [1]

References:
   main.js:3:11
   3| (<fbs />: number); // Error: ReactElement ~> number
                ^^^^^^ [2]



Found 1 error
